--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -146,12 +146,12 @@
 
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/divider"
-                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_buy" />
+                app:layout_constraintTop_toBottomOf="@+id/description" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/bottom_constraint_layout"
